# asm-rgb-converter

./: CMakeLists.txt  README.md  color_structures.c  color_structures.h  converters.h  main.c  test_utils.c  test_utils.h  tests.h
src/: avx2_conv.asm  avx2_conv_rgb2yuv.asm  avx2_conv_rgb2yuv_improved.asm  avx2_conv_yuv2rgb.asm  axv2_conv_yuv2rgb_improved.asm  fixed_cnvrt.c  float_cnvrt.c
tests/: test_compare_with_model.c  test_isomorphism.c  test_performance.c  test_small_example.c
